# vector_tools

./: .gitignore  README.md  pyproject.toml
src/vector_tools/: core.py
tests/: bipoint.py  tripoint.py
