[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vector_tools"
version = "0.0.1"
authors = [
    {name = "Santiago F. Caracciolo", email = "santiago.caracciolo@gmail.com"},
]
description = "A tiny project to recycle easy vector operations used during my PhD "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy"
]
